nacos和seata配置参数优化

--- a/onekey-springboot-seata-coupon/src/main/resources/registry.conf
+++ b/onekey-springboot-seata-coupon/src/main/resources/registry.conf
@@ -4,8 +4,8 @@ registry {
 
   nacos {
     serverAddr = "localhost:8848"
-    namespace = "3f7924ca-8fda-4bf6-bb81-5d0d5679bf7e"
-    group="dev"
+    namespace = ""
+    group="seata"
     cluster = "default"
   }
   eureka {
