--- a/onekey-springboot-seata-coupon/src/main/resources/application.properties
+++ b/onekey-springboot-seata-coupon/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.cloud.alibaba.seata.tx-service-group=onekey-springboot-seata-coupon-fesca
 
 # 配置nacos 注册与发现
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-spring.cloud.nacos.discovery.namespace=3f7924ca-8fda-4bf6-bb81-5d0d5679bf7e
+spring.cloud.nacos.discovery.namespace=
 spring.cloud.nacos.discovery.group=dev
 
 
