--- a/onekey-springboot-seata-product/src/main/resources/application.properties
+++ b/onekey-springboot-seata-product/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/product
 spring.application.name=onekey-springboot-seata-product
 
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-spring.cloud.nacos.discovery.namespace=3f7924ca-8fda-4bf6-bb81-5d0d5679bf7e
+spring.cloud.nacos.discovery.namespace=
 spring.cloud.nacos.discovery.group=dev
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mall_product?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
